# python-template

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  mise.toml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
mypackage/: __init__.py  _version.py  cli.py  main.py
notebooks/: main.ipynb  sample.ipynb
tests/: conftest.py  test_cli.py  test_main.py
